--- a/beadando/Views/Toys/Index.cshtml
+++ b/beadando/Views/Toys/Index.cshtml
@@ -1,59 +1,41 @@
-@model IEnumerable<beadando.Models.Toy>
+@model IEnumerable<beadando.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Játékok";
 }
 
-<h1>Index</h1>
+<h1>Játékok</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Hozzáadás</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.ID)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="container-sm">
+
+    @foreach (var category in Model)
+    {
+        <h2>@Html.DisplayFor(modelItem => category.Title)</h2>
+        <p>@Html.DisplayFor(modelItem => category.Description)</p>
+        <div class="row g-3">
+            @foreach (var item in category.Toys!)
+            {
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3 card m-3">
+                    <img src=@Html.DisplayFor(modelItem => item.Image) class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">@Html.DisplayFor(modelItem => item.Title)</h5>
+                        <p class="card-text">@Html.DisplayFor(modelItem => item.Description)</p>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">@Html.DisplayFor(modelItem => item.Price)</p>
+
+                    </div>
+                    <div class="card-body">
+                        <a class="card-link" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                        <a class="card-link" asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                        <a class="card-link" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    </div>
+                </div>
+            }
+        </div>
+    }
+
+</div>
