--- a/beadando/Views/Home/Index.cshtml
+++ b/beadando/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Legkomolyabb játékok</h1>
+<div class="text-center position-relative cover">
+    <img class="img-fluid cover-img" src="pic/cover.jpg" alt="Toy train"/>
+    <h1 class="display-4 position-absolute hero-text"><b>Legkomolyabb Játékok</b></h1>
 </div>
