--- a/toystore/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AccessDeniedModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Internal.AccessDeniedModel
 @{
     ViewData["Title"] = "Access denied";
 }
