--- a/toystore/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PersonalDataModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.PersonalDataModel
 @{
     ViewData["Title"] = "Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
