--- a/toystore/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ChangePasswordModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.ChangePasswordModel
 @{
     ViewData["Title"] = "Change password";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
