--- a/toystore/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model DeletePersonalDataModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.DeletePersonalDataModel
 @{
     ViewData["Title"] = "Delete Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
