--- a/toystore/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model DownloadPersonalDataModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.DownloadPersonalDataModel
 @{
     ViewData["Title"] = "Download Your Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
