--- a/toystore/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EmailModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.EmailModel
 @{
     ViewData["Title"] = "Manage Email";
     ViewData["ActivePage"] = ManageNavPages.Email;
