--- a/toystore/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EnableAuthenticatorModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.EnableAuthenticatorModel
 @{
     ViewData["Title"] = "Configure authenticator app";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
