--- a/toystore/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ExternalLoginsModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.ExternalLoginsModel
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
