--- a/toystore/Areas/Identity/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model GenerateRecoveryCodesModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.GenerateRecoveryCodesModel
 @{
     ViewData["Title"] = "Generate two-factor authentication (2FA) recovery codes";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
