--- a/toystore/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ResetAuthenticatorModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.ResetAuthenticatorModel
 @{
     ViewData["Title"] = "Reset authenticator key";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
