--- a/toystore/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ShowRecoveryCodesModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.ShowRecoveryCodesModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData["ActivePage"] = "TwoFactorAuthentication";
