--- a/toystore/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/toystore/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Microsoft.AspNetCore.Http.Features
-@model TwoFactorAuthenticationModel
+@model Microsoft.AspNetCore.Identity.UI.V5.Pages.Account.Manage.Internal.TwoFactorAuthenticationModel
 @{
     ViewData["Title"] = "Two-factor authentication (2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
