--- a/toystore/Views/Download/Create.cshtml
+++ b/toystore/Views/Download/Create.cshtml
@@ -1,39 +1,36 @@
 @model beadando.Models.Downloadable
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Fájl feltöltés";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<div class="container-sm mt-3">
 
-<h4>Downloadable</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <h1>Fájl feltöltés</h1>
+
+    <hr/>
+    <div class="container-sm">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <label asp-for="Title" class="control-label">Fájl neve</label>
+                <input asp-for="Title" class="form-control" name="title" autocomplete="off"/>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Path" class="control-label"></label>
-                <input asp-for="Path" class="form-control" />
-                <span asp-validation-for="Path" class="text-danger"></span>
+                <label for="file" class="control-label">Válasszon fájlt:</label>
+                <input id="file" name="file" class="form-control" type="file"/>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-4 d-flex w-100 gap-5">
+                <a asp-action="Index" class="flex-grow-1 btn btn-secondary">Vissza</a>
+                <input type="submit" value="Feltöltés" class="flex-grow-1 btn btn-primary"/>
             </div>
         </form>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
