--- a/toystore/Views/Download/Delete.cshtml
+++ b/toystore/Views/Download/Delete.cshtml
@@ -5,30 +5,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<div class="container-sm mt-3">
+    <h1>Törlés</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Downloadable</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Path)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Path)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <h3>Biztos törlöd ezt a fájlt?</h3>
+    <div>
+        <h4>Fájl</h4>
+        <hr/>
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Title)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Title)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Path)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Path)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="ID"/>
+            <input type="submit" value="Törlés" class="btn btn-danger"/> |
+            <a asp-action="Index">Vissza</a>
+        </form>
+    </div>
 </div>
