--- a/toystore/Views/Home/Contact.cshtml
+++ b/toystore/Views/Home/Contact.cshtml
@@ -13,8 +13,8 @@
 <h3 class="display-6 fs-5"><b>Cím:</b></h3>
 <p>
 <i>Legkomolyabb Játékok Üzlet</i><br/>
-Legkomolyabb utca 1.<br/>
-Legkomolyabb város<br/>
+Komoly utca 1.<br/>
+Komoly város<br/>
 Külföld<br/>
 </p>
 </div>
