--- a/toystore/Views/Toys/Index.cshtml
+++ b/toystore/Views/Toys/Index.cshtml
@@ -27,7 +27,7 @@
                             <p class="card-text">@Html.DisplayFor(modelItem => item.Description)</p>
                         </div>
                         <div class="card-body flex-grow-0">
-                            <p class="card-text">@Html.DisplayFor(modelItem => item.Price)</p>
+                            <p class="card-text">@Html.DisplayFor(modelItem => item.Price) €</p>
 
                         </div>
                         <div class="card-body flex-grow-0">
